--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <title>Precio a tu catálogo</title>
 </head>
 <body>
-    <h1>Muchas gracias por utilizar nuestro servicio!</h1>
+    <h1 style="text-align: center;">Muchas gracias por utilizar nuestro servicio!</h1>
     <h2>La página está cargando</h2>
     <img src="img/loading.gif" alt="Cargando...">
     <p>Esto podría demorar un tiempo...</p>
-
+    <p>Agradecemos su paciencia</p>
+    <img src="img/cargando.gif" alt="">
+    <p class="abajo">Somos TechSolution. <br>
+      Nos dedicados a brindar soluciones de <strong>automatización digital</strong> para empresas locales, especialmente pequeñas pymes y emprendimientos. <br>
+      Muchas gracias por su visita. <br>
+      Por cualquier consulta, no dude en contactarnos: 11 3177-1201</p>
     <footer>
         <div class="fotoFoot">
           <img class="fotoFoot2" src="img/logoR-transparente.png" alt="Logo Tech Solution">
