--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
     <h1 style="text-align: center;">Muchas gracias por utilizar nuestro servicio!</h1>
     <h2>La página está cargando</h2>
-    <img src="img/loading.gif" alt="Cargando...">
+    <img style="width: 300px;" src="img/loading-23.gif" alt="Cargando...">
     <p>Esto podría demorar un tiempo...</p>
     <p>Agradecemos su paciencia</p>
-    <img src="img/cargando.gif" alt="">
     <p class="abajo">Somos TechSolution. <br>
       Nos dedicados a brindar soluciones de <strong>automatización digital</strong> para empresas locales, especialmente pequeñas pymes y emprendimientos. <br>
       Muchas gracias por su visita. <br>
