--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <p class="abajo">Somos TechSolution. <br>
       Nos dedicados a brindar soluciones de <strong>automatización digital</strong> para empresas locales, especialmente pequeñas pymes y emprendimientos. <br>
       Muchas gracias por su visita. <br>
-      Por cualquier consulta, no dude en contactarnos: 11 3177-1201</p>
+      Por cualquier consulta, no dude en contactarnos: <br>
+       11 3177-1201</p>
     <footer>
         <div class="fotoFoot">
           <img class="fotoFoot2" src="img/logoR-transparente.png" alt="Logo Tech Solution">
