--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Esto podría demorar un tiempo...</p>
     <p>Agradecemos su paciencia</p>
     <p class="abajo">Somos TechSolution. <br>
-      Nos dedicados a brindar soluciones de <strong>automatización digital</strong> para empresas locales, especialmente pequeñas pymes y emprendimientos. <br>
+      Nos dedicamos a brindar soluciones de <strong>automatización digital</strong> para todo tipo de organizaciones. <br>
       Muchas gracias por su visita. <br>
       Por cualquier consulta, no dude en contactarnos: <br>
        11 3177-1201</p>
